[package]
name = "voice-selector"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
lazy_static = "1.4.0"
skyline-web = { git = "https://github.com/skyline-rs/skyline-web" }
percent-encoding = "2.1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
